src/test/ui/span/destructor-restrictions.stderr
error[E0597]: `*a` does not live long enough
  --> $DIR/destructor-restrictions.rs:8:10
   |
LL |         *a.borrow() + 1
   |          ^ borrowed value does not live long enough
LL |     };
   |     -- borrowed value needs to live until here
   |     |
   |     `*a` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
